--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the array.
     // 🧠 As you have done in the past, declare a variable before you start looping, to accumulate the result.
     function sumNumsFor(nums) {
-
+      let sum = 0
+      for (let i in nums) {
+        if (nums[i] === 13) {
+          return "I'm too superstitious!"
+        } else if (nums[i] !== 13 && typeof nums[i] === 'number') {
+          sum = sum += nums[i]
+        }
+      }
+      return sum
     }
 
     // 👉 CHALLENGE 2
@@ -41,7 +49,15 @@
     // ❗ Notes:
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the characters of the string.
     function stripVowels(str) {
-
+      let stri = str.split("")
+      let combiner = ''
+      for (let i in stri) {
+        if ((stri[i] === "a") || (stri[i] === "e") || (stri[i] === "i") || (stri[i] === "o") || (stri[i] === "u")) {
+        } else {
+          combiner = combiner += stri[i]
+        }
+      }
+      return combiner
     }
 
     // 👉 CHALLENGE 3
@@ -49,8 +65,18 @@
     // 🧠 Examples of usage:
     // sumNumsWhile([1, 2, 3]) // should return 6
     // sumNumsWhile([1, 2, 13]) // should return "I'm too superstitious!"
-    function sumNumsWhile() {
-
+    function sumNumsWhile(num) {
+      let sum = 0
+      let i = 0
+      while (i < num.length) {
+        if(num[i] === 13) {
+          return "I'm too superstitious!"
+        } else if (num[i] !== 13 && typeof num[i] === 'number') {
+          sum = sum += num[i]
+        }
+        i++
+      }
+      return sum
     }
 
     // 👉 CHALLENGE 4
@@ -70,8 +96,16 @@
     // 🧠 There are many ways to solve this, but practice using a while loop.
     // 🧠 Work out using pen and paper how the round number and the lifePoints change after each round.
     // 🧠 As long as there are lifePoints, decrease lifePoints by round number, and increase round number by one.
-    function fightMonsters() {
-
+    function fightMonsters(life) {
+      let health = life
+      let rounds = 1
+      while (health > 0) {
+        health = health - rounds
+        if (health > 0) {
+          rounds++
+        }
+      }
+      return ('You died in round ' + rounds)
     }
 
     // 👉 CHALLENGE 5
@@ -81,8 +115,14 @@
     // findEvenNums([0, 1, 2, 3, 4]) // should return [0, 2, 4]
     // ❗ Notes:
     // 🧠 Use any kind of loop you'd like and the push method to populate the array of even numbers.
-    function findEvenNums() {
-
+    function findEvenNums(nums) {
+      numr = []
+      for (let i in nums) {
+        if (nums[i] % 2 === 0) {
+          numr.push(nums[i])
+        }
+      }
+      return numr
     }
 
     // 👉 CHALLENGE 6
@@ -92,8 +132,17 @@
     // 🧠 Ages in the subarrays should appear in the same order they appeared in the original array.
     // 🧠 Examples of usage:
     // separateAges([31, 12, 25, 65, 84, 20]) // should return [[12, 20], [31, 25, 65, 84]]
-    function separateAges() {
-
+    function separateAges(ages) {
+      let younger = []
+      let older = []
+      for (let i in ages) {
+        if (ages[i] < 21) {
+          younger.push(ages[i])
+        } else {
+          older.push(ages[i])
+        }
+      }
+      return [younger, older]
     }
 
     // 👉 CHALLENGE 7
@@ -103,8 +152,10 @@
     // 🧠 The "tail" prop contains an array holding the elements of the array after the first one.
     // 🧠 Examples of usage:
     // headAndTail([1, 2, 3]) // should return { head: 1, tail: [2, 3] }
-    function headAndTail() {
-
+    function headAndTail(coin) {
+      let tail = coin.splice(1, coin.length)
+      let head = coin[0]
+      return {"head" : head, "tail" : tail}
     }
 
     // 👉 CHALLENGE 8
@@ -114,8 +165,23 @@
     // nestedLoops(['hello', 'goodbye']) // should return ['hEllO', 'gOOdbyE']
     // ❗ Notes:
     // 🧠 To capitalize a string you can use its toUpperCase method: "a".toUpperCase() returns "A"
-    function nestedLoops() {
-
+    function nestedLoops(stri) {
+      let result = []
+      for (let i in stri) {
+        let word = stri[i]
+        let changedword = ''
+        for (let i in word) {
+          let char = word[i]
+          if ((char === "a") || (char === "e") || (char === "i") || (char === "o") || (char === "u")) {
+            let uppercase = char.toUpperCase()
+            changedword = changedword += uppercase
+          } else {
+            changedword = changedword += char
+          }
+        }
+        result.push(changedword)
+      }
+      return result
     }
 
     // 👉 CHALLENGE 9
@@ -129,7 +195,14 @@
     // 🧠 Practice using pop and slice.
     // 🧠 Note that pop modifies the original array in place and returns the "popped" element, whereas slice gives us a brand new array.
     function crazyTrimmer(arr) {
-
+      if (arr.length % 2 === 0) {
+        arr.pop()
+        return arr
+      } else if (arr.length % 2 === 1) {
+        slicer = arr.slice(1, arr.length)
+        slicer.pop()
+        return slicer
+      }
     }
 
     // 🧪 TESTS, do not work below this line
